--- a/CasaOSDeltaSynchronizer/CasaOSDeltaSynchronizer.csproj
+++ b/CasaOSDeltaSynchronizer/CasaOSDeltaSynchronizer.csproj
@@ -7,4 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>CasaOSDeltaSynchronizer.Test</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
 </Project>
