Main tries checks if files have changed and return a message differentiating this

--- a/CasaOSDeltaSynchronizer.Test/CasaOSDeltaSynchronizer.Test.csproj
+++ b/CasaOSDeltaSynchronizer.Test/CasaOSDeltaSynchronizer.Test.csproj
@@ -28,6 +28,9 @@
       <None Update="Services\appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Services\appsettingsProperPaths.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
