--- a/CasaOSDeltaSynchronizer/CasaOSDeltaSynchronizer.csproj
+++ b/CasaOSDeltaSynchronizer/CasaOSDeltaSynchronizer.csproj
@@ -12,4 +12,10 @@
             <_Parameter1>CasaOSDeltaSynchronizer.Test</_Parameter1>
         </AssemblyAttribute>
     </ItemGroup>
+
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
 </Project>
