--- a/CasaOSDeltaSynchronizer.Test/CasaOSDeltaSynchronizer.Test.csproj
+++ b/CasaOSDeltaSynchronizer.Test/CasaOSDeltaSynchronizer.Test.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="DisposableFileSystem" Version="2.1.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
         <PackageReference Include="xunit" Version="2.9.3" />
         <PackageReference Include="xunit.runner.visualstudio" Version="3.1.1">
@@ -24,7 +25,10 @@
 
 
     <ItemGroup>
-      <None Update="Services\appsettings.json">
+      <None Update="Services\appsettingsTest.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
