--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,15 +2,15 @@ name: .NET + SonarQube analysis
 
 on:
   push:
-    branches: [ "main" ]
+    branches:     
+      - '**'        
+      - '!main'   
   pull_request:
     types: [opened, synchronize, reopened]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
