--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -14,6 +14,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.17
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 9.0.x
       - name: Checkout Repo
         uses: actions/checkout@v4
         with:
