--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -31,8 +31,13 @@ jobs:
       - name: Install dotnet sonar scanner
         run: |
           dotnet tool install --global dotnet-sonarscanner
+      - name: Install dotcover
+        run: |
+          dotnet tool install --global JetBrains.dotCover.CommandLineTools
+  
       - name: Build + Analyze
         run: |
-          dotnet-sonarscanner begin /k:"${{ secrets.PROJECT_KEY }}" /o:"${{ secrets.ORGANIZATION }}" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
-          dotnet build
+          dotnet-sonarscanner begin /k:"${{ secrets.PROJECT_KEY }}" /o:"${{ secrets.ORGANIZATION }}" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}" /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
+          dotnet build --no-incremental
+          dotnet dotcover test --dcReportType=HTML
           dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
