--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -31,13 +31,18 @@ jobs:
       - name: Install dotnet sonar scanner
         run: |
           dotnet tool install --global dotnet-sonarscanner
-      - name: Install dotcover
+    
+      - name: Install coverlet
         run: |
-          dotnet tool install --global JetBrains.dotCover.CommandLineTools
+          dotnet tool install --global coverlet.console
   
       - name: Build + Analyze
         run: |
-          dotnet-sonarscanner begin /k:"${{ secrets.PROJECT_KEY }}" /o:"${{ secrets.ORGANIZATION }}" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}" /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
+          dotnet-sonarscanner begin /k:"${{ secrets.PROJECT_KEY }}" /o:"${{ secrets.ORGANIZATION }}" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}" /d:sonar.cs.opencover.reportsPaths=coverage.xml
           dotnet build --no-incremental
-          dotnet dotcover test --dcReportType=HTML
+          coverlet .\CasaOSDeltaSynchronizer.Test\bin\Debug\net9.0\CasaOSDeltaSynchronizer.Test.dll
+            --target "dotnet"
+            --targetargs "test --no-build"
+            -f=opencover
+            -o="coverage.xml"
           dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
